feat(varnish): Added visual cache response indicator page
This commit introduces a new feature to visually distinguish whether a response originates from the server or the cache. The changes made include:

- Added a new endpoint "/test" to the Node.js application, where the cache is now active.
- When a request is made to the root ("/") endpoint, the application checks if the response from the "/test" endpoint is cached. If it is, it serves the "/views/cache.html" page and logs the response as a cached request.
- If the response is not cached, it serves the "/views/index.html" page and logs the response as a non-cached request.

These changes enhance the user experience by visually indicating whether a response is served from the cache or the server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
    varnish:
@@ -9,16 +9,20 @@ services:
          - "80:80"
       volumes:
          - ./default.vcl:/etc/varnish/default.vcl
+         - ./hit-miss.vcl:/etc/varnish/hit-miss.vcl
       depends_on:
          - web
 
    web:
       build: ./node-app # Build the Docker image from the specified directory
       container_name: node-app
+      environment:
+         - BACKEND_DOMAIN_NAME=${BACKEND_DOMAIN_NAME}
       ports:
          - "8080:8080"
       networks:
          - proxy
+
 networks:
-    proxy:
-        driver: bridge
+   proxy:
+      driver: bridge
