feat(traefik): Integrate Traefik for SSL Certificates and HTTP to HTTPS Redirection
This commit introduces Traefik to the project, enabling the management of SSL certificates for the backend and implementing HTTP to HTTPS redirection. The key changes made include:

- Added Traefik as a service in the Docker Compose configuration to handle SSL certificates and routing.
- Included new environment variables ACME_EMAIL and TRAEFIK_LOG_LEVEL in the project's configuration.
- Implemented an HTTP to HTTPS redirection for the backend using Traefik middleware.

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-BACKEND_DOMAIN_NAME=app.jhune.space
+BACKEND_DOMAIN_NAME=jhune.space
 BACKEND_PORT=8080
 VARNISH_TTL=3s
 VARNISH_GRACE=2s
+ACME_EMAIL=donovann@jhune.dev
+TRAEFIK_LOG_LEVEL=ERROR
